--- a/PokemonMaster/package.json
+++ b/PokemonMaster/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "firebase": "^8.6.8",
     "moment": "^2.29.1",
     "nuxt": "^2.15.3"
   },
